syntax = "proto3";
package chat.v1;

service ChatService {
  rpc Chat(stream ChatRequest) returns (stream ChatResponse);
}

message ChatRequest {
  string room_id = 1;
  string sender_id = 2;
  string message_text = 3;
}

message ChatResponse {
  string room_id = 1;
  string sender_id = 2;
  string message_text = 3;
  string message_id = 4;
}
